External API implementation done.

--- a/views/invalid.ejs
+++ b/views/invalid.ejs
@@ -1,11 +1,24 @@
-
 <%- include("partials/header") -%>
 
 
 
-<h1>Invalid !!</h1>
-<p class="lead"><b>Email Address :</b> <%= email %></p>
-<p class="lead"><b>Username :</b> <%= username %></p>
-<p class="lead"><%= info %></p>
+    <h1 style="color: red;">Invalid !!</h1>
+    <p class="lead"><b>Email Address :</b>
+        <%= email %>
+    </p>
+    <p class="lead"><b>Username :</b>
+        <%= username %>
+    </p>
+    <p class="lead"><b>Domain :</b>
+        <%= domain %>
+    </p>
+    
+    <p class="lead"><b>Valid Email :</b>
+        <%= validEmail %>
+    </p>
+    <p class="lead"><b>Role Email :</b>
+        <%= isRoleEmail %>
+    </p>
+    
 
-<%- include("partials/footer") -%>
+    <%- include("partials/footer") -%>
