--- a/views/valid.ejs
+++ b/views/valid.ejs
@@ -3,15 +3,22 @@
 
 
 
-    <h1>Valid !!</h1>
+    <h1 style="color: green;">Valid !!</h1>
     <p class="lead"><b>Email Address :</b>
         <%= email %>
     </p>
     <p class="lead"><b>Username :</b>
         <%= username %>
     </p>
-    <p class="lead">
-        <%= info %>
+    <p class="lead"><b>Domain :</b>
+        <%= domain %>
+    </p>
+    
+    <p class="lead"><b>Valid Email :</b>
+        <%= validEmail %>
+    </p>
+    <p class="lead"><b>Role Email :</b>
+        <%= isRoleEmail %>
     </p>
 
 
